--- a/rb1_base_2dnav/config_navigation/diff_drive/teb_local_planner_params.yaml
+++ b/rb1_base_2dnav/config_navigation/diff_drive/teb_local_planner_params.yaml
@@ -23,6 +23,19 @@ TebLocalPlannerROS:
  footprint_model:
    type: "point"
 
+# footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+#   type: "circular"
+#   radius: 0.25 # for type "circular"
+#   line_start: [ 0.0, 0.36] # for type "line"
+#   line_end: [0.4, 0.0] # for type "line"
+#   front_offset: 0.2 # for type "two_circles"
+#   front_radius: 0.2 # for type "two_circles"
+#   rear_offset: 0.2 # for type "two_circles"
+#   rear_radius: 0.2 # for type "two_circles"
+#   vertices: [ [0.36, -0.3], [0.36, 0.3], [-0.36, 0.3], [-0.36, -0.3] ] # for type "polygon"
+
+
+
  # GoalTolerance
     
  xy_goal_tolerance: 0.2
