--- a/rb1_base_control/config/rb1_base_control.yaml
+++ b/rb1_base_control/config/rb1_base_control.yaml
@@ -14,4 +14,47 @@ rb1:
     type: joint_state_controller/JointStateController 
     publish_rate: 100.0
 
+  mobile_base_controller:
+    type        : "diff_drive_controller/DiffDriveController"
+    left_wheel  : 'joint_left_wheel'
+    right_wheel : 'joint_right_wheel'
+    publish_rate: 50.0               # default: 50
+    pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+    twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
+
+    # Wheel separation and diameter. These are both optional.
+    # diff_drive_controller will attempt to read either one or both from the
+    # URDF if not specified as a parameter
+    wheel_separation : 0.433
+    wheel_radius : 0.0762
+    
+    # Wheel separation and radius multipliers
+    wheel_separation_multiplier: 1.0 # default: 1.0
+    wheel_radius_multiplier    : 1.0 # default: 1.0
+
+    # Velocity commands timeout [s], default 0.5
+    cmd_vel_timeout: 0.25
+
+    # Base frame_id
+    base_frame_id: base_footprint #default: base_link
+
+    # Velocity and acceleration limits
+    # Whenever a min_* is unspecified, default to -max_*
+    linear:
+      x:
+        has_velocity_limits    : true
+        max_velocity           : 1.75 # m/s
+        min_velocity           : -1.75 # m/s
+        has_acceleration_limits: true
+        max_acceleration       : 3.00  # m/s^2
+        min_acceleration       : -3.00 # m/s^2
+    angular:
+      z:
+        has_velocity_limits    : true
+        max_velocity           : 6.0  # rad/s
+        has_acceleration_limits: true
+        max_acceleration       : 6.0  # rad/s^2
+
+
+
 
