--- a/rb1_base_2dnav/package.xml
+++ b/rb1_base_2dnav/package.xml
@@ -6,11 +6,17 @@
     This package configures the move_base stack and makes use of the gmapping and amcl algorithms to
     move the rb1_base robot 
   </description>
-  <maintainer email="info@robotnik.es">Robotnik</maintainer>
+  
+  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
+  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
+  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
+  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
+
   <license>BSD</license>
 
-  <url>http://ros.org/wiki/rb1_base_2dnav</url>
-  <author>Robotnik</author>
+  <url type="website">http://ros.org/wiki/rb1_base_2dnav</url>
+<url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim.git</url>
+  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>
 
   <buildtool_depend>catkin</buildtool_depend>
     
@@ -19,10 +25,9 @@
   <run_depend>move_base</run_depend>
   <run_depend>gmapping</run_depend>
   <run_depend>amcl</run_depend>
-  <run_depend>robot_pose_efk</run_depend>
+  <run_depend>robot_pose_ekf</run_depend>
   <run_depend>map_server</run_depend>
   <run_depend>rviz</run_depend>
-  <run_depend>topic_tools</run_depend>
   <run_depend>tf</run_depend>
      
 </package>
