--- a/rb1_base_sim/package.xml
+++ b/rb1_base_sim/package.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0"?>
 <package>
   <name>rb1_base_sim</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>The rb1_base_sim metapackage</description>
 
-  <maintainer email="info@robotnik.es">Robotnik</maintainer>
+  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
+  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
+  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
+
+  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
+
   <license>BSD</license>
 
-
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/rb1_base_sim</url> -->
+  <url type="website">http://wiki.ros.org/rb1_base_sim</url>
+  <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
+  <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>
 
 
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
+ 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <!-- The export tag contains other, unspecified, tags -->
+  <run_depend>rb1_base_gazebo</run_depend>
+  <run_depend>rb1_base_control</run_depend>
+  <run_depend>rb1_base_2dnav</run_depend>
+  <run_depend>rb1_base_purepursuit</run_depend>
+
+ 
   <export>
-    <!-- You can specify that this package is a metapackage here: -->
+   
     <metapackage/>
-    <!-- Other tools can request additional information be placed here -->
+   
   </export>
   
 </package>
