--- a/rb1_base_purepursuit/package.xml
+++ b/rb1_base_purepursuit/package.xml
@@ -18,7 +18,7 @@
 
   
   <buildtool_depend>catkin</buildtool_depend>
-  <!--build_depend>robotnik_pp_planner</build_depend-->
+  <build_depend>robotnik_pp_planner</build_depend>
   <run_depend>robotnik_pp_planner</run_depend>
 
   
