--- a/rb1_base_2dnav/package.xml
+++ b/rb1_base_2dnav/package.xml
@@ -21,6 +21,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_runtime</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>move_base</build_depend>
     
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
