--- a/rb1_base_2dnav/package.xml
+++ b/rb1_base_2dnav/package.xml
@@ -22,6 +22,10 @@
   <build_depend>message_runtime</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>move_base</build_depend>
+  <build_depend>gmapping</build_depend>
+  <build_depend>amcl</build_depend>
+  <build_depend>robot_pose_ekf</build_depend>
+  <build_depend>map_server</build_depend>
     
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
