--- a/rb1_base_2dnav/package.xml
+++ b/rb1_base_2dnav/package.xml
@@ -26,6 +26,8 @@
   <build_depend>amcl</build_depend>
   <build_depend>robot_pose_ekf</build_depend>
   <build_depend>map_server</build_depend>
+  <build_depend>rviz</build_depend>
+  <build_depend>tf</build_depend>
     
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
