--- a/rb1_base_control/config/rb1_base_control.yaml
+++ b/rb1_base_control/config/rb1_base_control.yaml
@@ -1,43 +1,38 @@
-rb1:
-  joint_left_velocity_controller:
-#    type: velocity_controllers/JointVelocityController
-    type: effort_controllers/JointEffortController
-    joint: joint_left_wheel
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+#ONLY WITH RB1_CONTROL
+    #joint_left_velocity_controller:
+    #type: velocity_controllers/JointVelocityController
+    #type: effort_controllers/JointEffortController
+    #joint: joint_left_wheel
+    #pid: {p: 100.0, i: 0.01, d: 10.0}
 
-  joint_right_velocity_controller:
-    type: effort_controllers/JointEffortController
-    joint: joint_right_wheel
-    pid: {p: 100.0, i: 0.01, d: 10.0}
+  #joint_right_velocity_controller:
+    #type: effort_controllers/JointEffortController
+    #joint: joint_right_wheel
+    #pid: {p: 100.0, i: 0.01, d: 10.0}
 
-  joint_read_state_controller:
+joint_read_state_controller:
     type: joint_state_controller/JointStateController 
     publish_rate: 100.0
 
-  mobile_base_controller:
+rb1:
     type        : "diff_drive_controller/DiffDriveController"
-    left_wheel  : 'joint_left_wheel'
-    right_wheel : 'joint_right_wheel'
+    left_wheel  : 'left_wheel_joint'
+    right_wheel : 'right_wheel_joint'
     publish_rate: 50.0               # default: 50
     pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
     twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
-
     # Wheel separation and diameter. These are both optional.
     # diff_drive_controller will attempt to read either one or both from the
     # URDF if not specified as a parameter
     wheel_separation : 0.433
     wheel_radius : 0.0762
-    
     # Wheel separation and radius multipliers
     wheel_separation_multiplier: 1.0 # default: 1.0
     wheel_radius_multiplier    : 1.0 # default: 1.0
-
     # Velocity commands timeout [s], default 0.5
     cmd_vel_timeout: 0.25
-
     # Base frame_id
     base_frame_id: base_footprint #default: base_link
-
     # Velocity and acceleration limits
     # Whenever a min_* is unspecified, default to -max_*
     linear:
