--- a/rb1_base_control/config/rb1_base_control.yaml
+++ b/rb1_base_control/config/rb1_base_control.yaml
@@ -1,4 +1,3 @@
-rb1:
   joint_left_velocity_controller:
 #    type: velocity_controllers/JointVelocityController
     type: effort_controllers/JointEffortController
@@ -16,8 +15,8 @@ rb1:
 
   rb1_base_control:
     type        : "diff_drive_controller/DiffDriveController"
-    left_wheel  : 'joint_left_wheel'
-    right_wheel : 'joint_right_wheel'
+    left_wheel  : 'rb1_base_left_wheel_joint'
+    right_wheel : 'rb1_base_right_wheel_joint'
     publish_rate: 50.0               # default: 50
     pose_covariance_diagonal : [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
     twist_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 1000.0]
@@ -36,7 +35,8 @@ rb1:
     cmd_vel_timeout: 0.25
 
     # Base frame_id
-    base_frame_id: base_footprint #default: base_link
+    base_frame_id: rb1_base_base_footprint #default: base_link
+    odom_frame_id: rb1_base_odom
 
     # Velocity and acceleration limits
     # Whenever a min_* is unspecified, default to -max_*
