--- a/rb1_base_sim/package.xml
+++ b/rb1_base_sim/package.xml
@@ -5,8 +5,12 @@
   <description>The rb1_base_sim metapackage</description>
 
   <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
-  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
-  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
+  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
+  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
+  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
+  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
+  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
+  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
 
   <author email="rguzman@robotnik.es">Roberto Guzmán</author>
 
@@ -16,14 +20,9 @@
   <url type="repository">https://github.com/RobotnikAutomation/rb1_base_sim</url>
   <url type="bugtracker">https://github.com/RobotnikAutomation/rb1_base_sim/issues</url>
 
-
- 
   <buildtool_depend>catkin</buildtool_depend>
 
   <run_depend>rb1_base_gazebo</run_depend>
-  <run_depend>rb1_base_control</run_depend>
-  <run_depend>rb1_base_2dnav</run_depend>
-  <run_depend>rb1_base_purepursuit</run_depend>
   <run_depend>rb1_base_sim_bringup</run_depend>
  
   <export>
