--- a/rb1_base_sim_bringup/config/elevator_fake_pickup_gazebo.yaml
+++ b/rb1_base_sim_bringup/config/elevator_fake_pickup_gazebo.yaml
@@ -4,22 +4,22 @@
 
 objects:
  -
-   model: rb2_simple_cart
-   default_link: link_0
+  model: rb2_simple_cart
+  default_link: link_0
 robots:
-- 
-   model: rb1_base_a
-   default_link: rb1_base_a_base_footprint
-   elevation_z: 0.05
-- 
-   model: rb1_base_b
-   default_link: rb1_base_b_base_footprint
-   elevation_z: 0.05
-- 
-   model: rb1_base_c
-   default_link: rb1_base_c_base_footprint
-   elevation_z: 0.05
+-
+  model: rb1_base
+  default_link: rb1_base_base_footprint
+  elevation_z: 0.05
+-
+  model: rb1_base_b
+  default_link: rb1_base_b_base_footprint
+  elevation_z: 0.05
+-
+  model: rb1_base_c
+  default_link: rb1_base_c_base_footprint
+  elevation_z: 0.05
 
 config:
-  # min distance for the simple pick
-  min_picking_distance: 0.1
+ # min distance for the simple pick
+ min_picking_distance: 0.1
