Add rb1_rblog_cart as a pickable object

--- a/rb1_base_sim_bringup/config/elevator_fake_pickup_gazebo.yaml
+++ b/rb1_base_sim_bringup/config/elevator_fake_pickup_gazebo.yaml
@@ -6,6 +6,9 @@ objects:
  -
   model: rb1_simple_cart
   default_link: link_0
+ -
+  model: rb1_rblog_cart
+  default_link: link_0
 robots:
 -
   model: robot
