--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM osrf/ros:melodic-desktop-full
-MAINTAINER Guillem Gari <ggari@robontik.es>
+MAINTAINER Nuria Diaz <ndiaz@robontik.es>
 
 # Non Root user
 ARG user_name=ros
