--- a/docker/docker-compose-nvidia.yml
+++ b/docker/docker-compose-nvidia.yml
@@ -2,6 +2,7 @@
 version: "3.7"
 services:
   base:
+    image: robotnik/rb1-base-sim:noetic-devel
     build:
       context: ..
       dockerfile: docker/Dockerfile
